--- a/src/components/Gif/Gif.css
+++ b/src/components/Gif/Gif.css
@@ -1,18 +1,23 @@
 .Gif {
-  display: block;
   border: 1px solid #eee;
-  margin: 20px auto;
-  width: 80%;
-  padding: 15px;
+  margin: 10px;
+  width: 40%;
+  padding: 10px;
   cursor: pointer;
   color: white;
-  text-decoration: none;
+  text-decoration: none;  
 }
 
-.Gif h4 {
+@media (min-width: 768px) {
+  .Gif {
+    width: 20%;
+  }  
+}
+
+.Gif h6 {
   margin: 0;
 }
 
 .Gif img {
-  width: 90%;
+  width: 100%;
 }
