--- a/src/components/Gif/styles.scss
+++ b/src/components/Gif/styles.scss
@@ -6,18 +6,17 @@
   cursor: pointer;
   color: white;
   text-decoration: none;  
+
+  @media (min-width: 768px) {
+    width: 20%;     
+  }
+
+  h6 {
+    margin: 0;
+  }
+
+  img {
+    width: 100%;
+  }
 }
 
-@media (min-width: 768px) {
-  .Gif {
-    width: 20%;
-  }  
-}
-
-.Gif h6 {
-  margin: 0;
-}
-
-.Gif img {
-  width: 100%;
-}
