--- a/src/components/TrendingSearches/styles.scss
+++ b/src/components/TrendingSearches/styles.scss
@@ -4,10 +4,10 @@
   list-style: none;
   flex-flow: row wrap;
   justify-content: center;
-}
 
-.trends li:after {
-  content: '|';
-  margin-left: 15px;
-  margin-right: 15px;
+  li:after {
+    content: '|';
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
