--- a/src/App.scss
+++ b/src/App.scss
@@ -14,9 +14,22 @@
 }
 
 button {
-  font-size: 2rem;
+  padding: 10px 20px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  background-color: #0099ff;
+  border: 1px solid #eee;
+  border-radius: 5px;
+
+  &:hover {
+    opacity: 80%;
+  }
 }
 
 a {
   color: #0099ff;
+  
+  &:hover {
+    opacity: 80%;
+  }
 }
