--- a/src/components/Gif/styles.scss
+++ b/src/components/Gif/styles.scss
@@ -1,22 +1,13 @@
-.Gif {
-  border: 1px solid #eee;
-  margin: 10px;
-  width: 40%;
-  padding: 10px;
+.Gif {  
   cursor: pointer;
-  color: white;
-  text-decoration: none;  
 
-  @media (min-width: 768px) {
-    width: 20%;     
+  &:hover {
+    opacity: 70%;
   }
 
-  h6 {
-    margin: 0;
-  }
-
-  img {
+  &__img {
     width: 100%;
+    object-fit: contain;
   }
 }
 
