--- a/src/components/ListOfGifs/styles.scss
+++ b/src/components/ListOfGifs/styles.scss
@@ -1,5 +1,9 @@
 .ListOfGifs {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 15px;
+  align-items: center;
+  min-height: 100vh;
+  margin-bottom: 25px;
 }
