--- a/src/components/ListOfGifs/styles.scss
+++ b/src/components/ListOfGifs/styles.scss
@@ -6,4 +6,8 @@
   align-items: center;
   min-height: 100vh;
   margin-bottom: 25px;
+
+  @media (min-width: 768px) {
+    min-height: auto;
+  }
 }
